[project]
name = "fast_fractional_differentiation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numba>=0.63.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "tables",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
tables = { git = "https://github.com/PyTables/PyTables" }
